[package]
name = "slint-center-win"
version = "0.2.0"
edition = "2021"
authors = ["prof79 <markus@markusegger.at>"]
description = "Center a Slint window running on a `winit` backend."
repository = "https://github.com/prof79/slint-center-win-crate"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
i-slint-backend-winit = { version = "1.5", features = ['renderer-femtovg', 'renderer-skia', 'renderer-software'] }
